<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_reminder"
        android:textSize="80sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <!--  Sign-in button  -->
    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_above="@+id/signUpBtn"
        android:layout_marginBottom="10dp"

        />

    <!--  Sign-up button  -->
    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        />


</RelativeLayout>