<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/ireminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_reminder"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/signin_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_i_reminder"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_below="@+id/ireminder"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:autofillHints=""
        android:layout_below="@+id/signin_account"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEt"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="Password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/signInBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/passwordEt"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot Password? Click Here"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/signInBt"
        android:layout_marginTop="10dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forgot_password"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/not_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" />

</RelativeLayout>